# teaching

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  build-push.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
notebooks/Social Computing/: 1 - NLP Data Collection.ipynb  2 - Exploratory Data Analysis.ipynb
