[project]
name = "JNV-Teaching"
version = "1.0.0"
description = "JNV's Teaching Notebooks, Scripts"
authors = [
  {name = "John Noel Victorino", email = "jvictorino@ateneo.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "numpy (>=2.2.2,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "openpyxl (>=3.1.5,<4.0.0)",
  "ipykernel (>=6.29.5,<7.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "matplotlib (>=3.10.0,<4.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "scikit-learn (>=1.6.1,<2.0.0)",
  "jinja2 (>=3.1.6)",
  "ipympl",
  "icecream",
  "streamlit"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
